--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.5.3",
     "babel-jest": "^29.6.1",
-    "jest": "^29.6.1"
+    "jest": "^29.6.1",
+    "jest-environment-jsdom": "^29.6.1",
+    "ts-node": "^10.9.1"
   }
 }
