--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/jest": "^29.5.3",
     "babel-jest": "^29.6.1",
     "jest": "^29.6.1",
+    "jest-css-modules": "^2.1.0",
     "jest-environment-jsdom": "^29.6.1",
     "ts-node": "^10.9.1"
   }
